# osw-selenium

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  tox.ini
.github/workflows/: main.yml  on-release-main.yml
docs/: api.md  architecture.md  concepts.md  conf.py  configuration.md  examples.md  getting-started.md  index.md
docs/_static/: custom.css
docs/api/: config.md  driver.md  pages-base.md  pages-json-editor.md  pages-login.md  utils.md
examples/: basic_config.py  create_eln_entry.py  login_and_verify.py  schema_path_utils.py
src/osw_selenium/: __init__.py  config.py  driver.py  utils.py
src/osw_selenium/pages/: __init__.py  base.py  json_editor.py  login.py
tests/: conftest.py  test_config.py  test_driver.py  test_eln_entry.py  test_foo.py  test_login.py  test_utils.py
tests/examples/: test_basic_config.py  test_create_eln_entry.py  test_login_and_verify.py  test_schema_path_utils.py
